Removing enum